--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,207 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* ----------------------Base Header - Footer Styles ---------------------- */
+
+header,
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+/* Header styles */
+
+header {
+   
+}
+
+header .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header img {
+
+}
+
+.header-divider {
+
+}
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ----------------- Mobile Styles - Homepage ----------------------------- */
+
+
+/* Hero Area */
+
+.hero-area {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+/* Aside */
+
+aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+aside .content-wrapper {
+  
+}
+
+.form-description {
+  
+}
+
+.form {
+  
+
+}
+
+/* Features */
+
+.features {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.features .features-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+
+/* Reviews */
+
+.reviews {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+
+}
+
+.reviews article {
+  
+}
+
+/* Footer */
+
+footer {
+ 
+}
+
+footer .content-wrapper {
+
+}
+
+.footer-content {
+
+}
+
+.contact {
+
+}
+
+address {
+
+}
+
+.social {
+
+}
+
+.copyright {
+ 
+}
+
+
+/* --------------------------------- FAQ Page ------------------------- */
+
+.faq {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.faq .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.faq-content {
+
+}
+
+
+/*-------------------------- About page ---------------------------- */
+.mission {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.mission .content-wrapper {
+
+}
+
+.mission-content {
+
+}
+
+.map {
+
+}
+
+.contact-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.contact-content {
+
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
