--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 /* ----------------------Base Header - Footer Styles ---------------------- */
 
 header,
@@ -100,7 +105,7 @@ footer {
 /* Header styles */
 
 header {
-   
+   padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -108,6 +113,7 @@ header .content-wrapper {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
 }
 
 header img {
@@ -115,7 +121,9 @@ header img {
 }
 
 .header-divider {
-
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -123,12 +131,52 @@ header nav {
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
+    width: 60%;
+    
 }
 
 header nav ul {
     display: flex;
     justify-content: space-around;
+    width: 100%;
     
+    
+}
+
+/* Footer */
+
+footer {
+ flex-direction: column;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+
+}
+
+.footer-content {
+
+}
+
+.footer p {
+  margin: 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer address {
+
+}
+
+footer .social {
+
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 footer .social-icons {
@@ -137,7 +185,7 @@ footer .social-icons {
   align-items: center;
 }
 
-footer .social p {
+footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -154,6 +202,10 @@ footer .social p {
     flex-flow: row wrap;
 }
 
+h1 {
+    
+}
+
 /* Aside */
 
 aside {
@@ -164,7 +216,8 @@ aside {
 }
 
 aside .content-wrapper {
-  
+    
+
 }
 
 .form-description {
@@ -184,13 +237,25 @@ aside .content-wrapper {
     flex-flow: row wrap;
 }
 
-.features .features-items {
+.features h2 {
+    margin-bottom: 60px;
+}
+
+.features article {
+    width: 63%;
+    margin: 30px 0;
+}
+
+.features .features-item-description {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
 }
 
+.features p {
+  margin: 0;
+}
 
 /* Reviews */
 
@@ -204,36 +269,19 @@ aside .content-wrapper {
 .reviews article {
   
 }
-
-/* Footer */
-
-footer {
- 
+.reviews h2 {
+  margin-bottom: 40px;
+}
+.reviews h3 {
+    width: 55%;
+    margin: 20px 0;
 }
 
-footer .content-wrapper {
-
+.reviews p {
+    
 }
 
-.footer-content {
 
-}
-
-.contact {
-
-}
-
-address {
-
-}
-
-.social {
-
-}
-
-.copyright {
- 
-}
 
 
 /* --------------------------------- FAQ Page ------------------------- */
@@ -252,8 +300,12 @@ address {
     flex-flow: row wrap;
 }
 
-.faq-content {
+.faq h2 {
+  margin-bottom: 40px;
+}
 
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
@@ -285,7 +337,7 @@ address {
 }
 
 .contact-content {
-
+    margin: 0;
 }
 
 /* ==========================================================================
