--- a/css/main.css
+++ b/css/main.css
@@ -521,7 +521,7 @@ aside .content-wrapper {
       text-align: center ;
   }
 
-}
+
 
 
 /* ==========================================================================
@@ -563,11 +563,64 @@ aside .content-wrapper {
     width: 100%;
 }
 
+}
 
 @media only screen and (min-width: 1200px){
       /*desktop styles here*/
+
+.content-wrapper{
+  max-width: 960px;
 }
 
+/* Hero */
+
+.hero-area h1 {
+  width: 60%;
+}
+/* Aside */
+
+aside .content-wrapper {
+  justify-content: space-around;
+}
+
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+  width: 30%;
+}
+
+/* Features */
+
+.features h2 {
+  width: 90%;
+}
+
+.features article {
+  flex-basis: 33%;
+}
+
+/* Reviews */
+
+.reviews article div {
+  width: 42%;
+}
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+       width: 95%;
+   }
+
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+   .faq h2 {
+    width: 100%;
+}
+
+}
 
 
 /* ==========================================================================
