--- a/css/main.css
+++ b/css/main.css
@@ -130,20 +130,11 @@ p {
   line-height: 1.285;
 }
  
-img {
- 
-}
- 
-figure {
- 
-}
  
 address {
  font-style: normal;
 }
  
-
-
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -173,10 +164,6 @@ header .content-wrapper {
     align-items: center;
     flex-flow: row wrap;
     margin: 0;
-}
-
-header img {
-
 }
 
 .header-divider {
@@ -279,6 +266,10 @@ footer .social-icons p {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background: url('../img/header.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .hero-area h1 {
@@ -337,6 +328,10 @@ input[type=button] {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background-image: url('../img/team.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .features h2 {
@@ -380,7 +375,6 @@ input[type=button] {
     width: 55%;
     margin: 20px 0;
 }
-
 
 
 /* --------------------------------- FAQ Page ------------------------- */
@@ -562,7 +556,7 @@ header figure {
 }
 
 header nav {
-  width: 20%;
+  width: 25%;
 }
 
 header nav ul {
@@ -740,7 +734,7 @@ p {
 /* Hero */
 .hero-area h1 {
   width: 60%;
-  font-size: 3.1em;
+  font-size: 3.25em;
 }
 
 /* Aside */
