--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,14 @@ address {
   margin: 50px 0;
 }
 
+img { 
+	width: 100%;
+}
+ 
+figure {
+  margin: 0;
+}
+
 /* ----------------------Base Header - Footer Styles ---------------------- */
 
 header,
@@ -227,9 +235,6 @@ footer h4 {
   font-weight: lighter;
 }
 
-footer address {
-
-}
 
 footer .social {
   color: #e2e3ed;
@@ -262,6 +267,23 @@ footer .social-icons p {
 
 /* Hero Area */
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+
+header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
 .hero-area {
     display: flex;
     justify-content: center;
@@ -270,10 +292,15 @@ footer .social-icons p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    min-height: 500px;
+    
+}
+
+.hero-area .content-wrapper {
+  margin: 0;
 }
 
 .hero-area h1 {
-  color: #e2e3ed;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 2.25em;
@@ -368,13 +395,25 @@ input[type=button] {
 
 .reviews h2 {
   margin-bottom: 40px;
-  font-weight: lighter;
   line-height: 1;
 }
-.reviews h3 {
-    width: 55%;
-    margin: 20px 0;
+.reviews figure {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
+.reviews h3 {
+    
+    margin: 20px;
+    text-align: left;
+}
+
+.reviews p {
+  text-align: left;
+}
+
 
 
 /* --------------------------------- FAQ Page ------------------------- */
@@ -546,6 +585,10 @@ header {
   padding: 33px 0;
 }
 
+header figure {
+  width: 30%;
+}
+
 header .content-wrapper {
   width: 100%;
   justify-content: space-between;
@@ -572,7 +615,7 @@ header nav ul {
 .hero-area h1 {
   font-size: 3em;
   line-height: 1;
-  margin: 0;
+  margin: 25px;
 }
 
 /* Aside */
@@ -604,17 +647,19 @@ aside .content-wrapper {
   }
 
   /* Reviews */ 
+
   .reviews article {
     display: flex;
     justify-content: space-between;
-    flex-flow: column;
   }
   
   .reviews h2 {
     width: 85%;
   }
-  .reviews article p {
-      width: 49%;         
+
+  .reviews article figure,
+  .reviews article div {
+    width: 49%;
   }
 
   .reviews h3 {
@@ -730,11 +775,16 @@ p {
     font-size: 1.125em;
     line-height: 1.333;
 }
+/* Header */
+
+header figure {
+  width: 25%;
+}
 
 /* Hero */
 .hero-area h1 {
   width: 60%;
-  font-size: 3.25em;
+  font-size: 3.1em;
 }
 
 /* Aside */
@@ -768,7 +818,7 @@ aside .content-wrapper .form {
   padding-bottom: 50px; 
 }
 
-.reviews article p {
+.reviews article div {
   width: 42%;
 }
 
