--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,22 @@ input[type=button] {
     
 }
 
+.map-container {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
