--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,8 @@ body {
 ul, 
 ol {
  list-style-type: none;
+ margin: 0;
+ padding: 0;
  
 }
  
@@ -115,6 +117,7 @@ h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.875em;
  font-weight: 500;
+ margin: 0;
 }
  
 h3, 
@@ -174,6 +177,14 @@ header .content-wrapper {
     margin: 0;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .header-divider {
   width: 100%;
   height: 1px;
@@ -190,8 +201,6 @@ header nav {
     text-transform: uppercase;
     font-size: 1.125em;
     font-weight: 700;
-    
-    
 }
 
 header nav ul {
@@ -214,25 +223,14 @@ footer {
 footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
-  
-
 }
 
 .footer p {
   margin: 0;
-  
 }
 
 footer .contact {
   margin-bottom: 50px;
-  color: #e2e3ed;
-  font-size: 1.125em;
-  text-align: center;
-  
-}
-
-footer h4 {
-  font-weight: lighter;
 }
 
 
@@ -245,16 +243,10 @@ footer .social {
   
 }
 
-footer .copyright {
-  margin: 20px 0;
-  color: #e2e3ed;
-}
-
 footer .social-icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 12.5em;
 }
 
 footer .social-icons p {
@@ -262,7 +254,6 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
   background-color: #527158;
-  
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -274,27 +265,14 @@ footer .social-icons i {
   
 }
 
+footer .copyright {
+  margin: 20px 0;
+}
+
 /* ----------------- Mobile Styles - Homepage ----------------------------- */
 
 
 /* Hero Area */
-
-header figure {
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-
-header figure {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
 
 .hero-area {
     display: flex;
@@ -327,11 +305,6 @@ aside {
     align-items: center;
     flex-flow: row wrap;
     background-color: #527158;
-    color: #e2e3ed;
-}
-
-aside h3 {
-  font-weight: lighter;
 }
 
 aside .form {
@@ -375,8 +348,6 @@ input[type=button] {
 
 .features h2 {
     margin-bottom: 60px;
-    color: #e2e3ed;
-    font-weight: lighter;
 }
 
 .features article {
@@ -414,6 +385,12 @@ input[type=button] {
   margin-bottom: 40px;
   line-height: 1;
 }
+
+.reviews h3 {  
+  margin: 20px;
+  width: 55%;
+}
+
 .reviews figure {
   width: 100%;
   display: flex;
@@ -421,17 +398,6 @@ input[type=button] {
   align-items: center;
   flex-flow: row wrap;
 }
-.reviews h3 {
-    
-    margin: 20px;
-    text-align: left;
-}
-
-.reviews p {
-  text-align: left;
-}
-
-
 
 /* --------------------------------- FAQ Page ------------------------- */
 
@@ -473,25 +439,12 @@ input[type=button] {
     background-color: #527158;
 }
 
-
-.contact-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    background-color: #2a423a;
-}
-
-.contact-content p {
-    margin: 0;
-    
-}
-
 .map-container {
   position: relative;
   padding-bottom: 125%;
   height: 0;
   overflow: hidden;
+  width: 100%;
 }
 
 .map-container iframe {
@@ -502,6 +455,18 @@ input[type=button] {
   height:100%;
 }
 
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #2a423a;
+}
+
+.contact-content p {
+  margin: 0;
+  
+}
 
 /* ==========================================================================
    Helper classes
@@ -645,6 +610,10 @@ header nav ul {
 
 /* Hero Area */
 
+.hero-area {
+  min-height: 600px;
+}
+
 .hero-area h1 {
   font-size: 3em;
   line-height: 1;
@@ -667,6 +636,10 @@ aside .content-wrapper {
 
   /* Features */
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article {
     flex-basis: 50%;
     display: flex;
@@ -678,6 +651,11 @@ aside .content-wrapper {
   .features .features-item-description {
       width: 62%;
   }
+
+  .features i {
+    margin-bottom: 30px;
+  }
+
 
   /* Reviews */ 
 
@@ -725,14 +703,15 @@ aside .content-wrapper {
   footer p {
     line-height: 1.285;
 }
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
 
   footer .copyright {
       width: 100%;
       text-align: center ;
   }
-
-
-
 
 /* ==========================================================================
    About Page
@@ -749,6 +728,10 @@ aside .content-wrapper {
   width: 45%;
 }
 
+.map-container {
+  padding-bottom: 45.5%;
+}
+
 .contact-section .content-wrapper h2 {
   width: 80%;
 }
@@ -762,9 +745,7 @@ aside .content-wrapper {
   font-size: 1.5em;
 }
 
-.map-container {
-  padding-bottom: 45%;
-}
+
 
 /* ==========================================================================
    FAQ Page
@@ -792,11 +773,12 @@ aside .content-wrapper {
 @media only screen and (min-width: 1200px){
       /*desktop styles here*/
 
-    header {
-        padding: 15px 0;
-      }
-    .content-wrapper{
-         max-width: 960px;
+header {
+  padding: 15px 0;
+ }
+    
+.content-wrapper{
+   max-width: 960px;
 }
 
 h2 {
@@ -820,8 +802,8 @@ header figure {
 
 /* Hero */
 .hero-area h1 {
-  width: 60%;
-  font-size: 3.1em;
+  width: 80%;
+  font-size: 3.75em;
 }
 
 /* Aside */
@@ -877,15 +859,15 @@ footer h4 {
   }
 
   .map-container {
-    padding-bottom: 38%;
+    padding-bottom: 37.5%;
   }
 
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
-   .faq h2 {
-    width: 100%;
-    font-size: 3em;
+.faq h2 {
+  width: 100%;
+  font-size: 3em;
 }
 
 .faq h4,
